# file-parser

./: index.html  main.js  package-lock.json  package.json  preload.js
file-parser-rust/: Cargo.toml  README.md  package-lock.json  package.json
file-parser-rust/src/: bank_file_parser.rs  lib.rs  order.rs  sass_file_parser.rs
