[package]
name = "file-parser-rust"
version = "0.1.0"
authors = ["songhao"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.28"
encoding_rs_io = "0.1.7"
csv = "1.1.6"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]

